2008-07-22  Andreas Kupries  <andreask@activestate.com>

	* generic/tclBasic.c: Added missing function comments.

	* generic/tclCompile.c: Made the new TclEnterCmdWordIndex
	* generic/tclCompile.h: static, and ansified.

	* generic/tclBasic.c: Reworked the handling of bytecode literals
	* generic/tclCompile.c: for #280 to fix the abysmal performance
	* generic/tclCompile.h: for deep recursion, replaced the linear
	* generic/tclExecute.c: search through the whole stack with
	* generic/tclInt.h: another hashtable and simplified the data
	structure used by the compiler (array instead of hashtable).
	Incidentially this also fixes the memory leak reported via [Bug
	2024937].

2008-07-21  Don Porter  <dgp@users.sourceforge.net>

	* tests/encoding.test:  Make failing tests pass again. [Bug 1972867]

2008-07-21  Andreas Kupries <andreask@activestate.com>

	* generic/tclBasic.c: Extended the existing TIP #280 system (info
	* generic/tclCmdAH.c: frame), added the ability to track the
	* generic/tclCompCmds.c: absolute location of literal procedure
	* generic/tclCompile.c: arguments, and making this information
	* generic/tclCompile.h: available to uplevel, eval, and
	* generic/tclInterp.c: siblings. This allows proper tracking of
	* generic/tclInt.h: absolute location through custom (Tcl-coded)
	* generic/tclNamesp.c: control structures based on uplevel, etc.
	* generic/tclProc.c:

2008-07-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tclFCmd.c: Inodes on windows are unreliable [Bug 2015723]

2008-07-20  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclDictObj.c (SetDictFromAny): Make the list->dict
	transformation a bit more efficient; modern dicts are ordered and so
	we can round-trip through lists without needing the string rep at all.
	* generic/tclListObj.c (SetListFromAny): Make the dict->list
	transformation not lossy of internal representations and hence more
	efficient. [Bug 2008248] (ajpasadyn) but using a more efficient patch.
